Update README.md
Dodata sekcija o pokretanju.